--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ CCS_v4/__Previews/*
 CCS_v4/History/*
 CCS_v4/Project Logs for CCS_v4/*
 debug.log
+CCS_v5/__Previews/*
+CCS_v5/History/*
+CCS_v5/Project Logs for CCS_v5/*
